--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,164 @@
+alabaster==0.7.12
+aniso8601==9.0.1
+antiorm==1.2.1
+appdirs==1.4.4
+arrow==1.2.3
 asgiref==3.5.2
+async-generator==1.10
+attrs==22.1.0
+Babel==2.11.0
 beautifulsoup4==4.11.1
+bibtexparser==1.4.0
+binaryornot==0.4.4
+blis==0.7.9
+bs4==0.0.1
+catalogue==2.0.8
 certifi==2022.9.24
+chardet==5.0.0
 charset-normalizer==2.1.1
+click==8.1.3
+cm-rgb==0.3.6
+confection==0.0.3
+contourpy==1.0.6
+cookiecutter==2.1.1
+cookiejar==0.0.3
+cssselect==1.2.0
+cycler==0.11.0
+cymem==2.0.7
+db==0.1.1
+db-sqlite3==0.0.1
+Deprecated==1.2.13
+distlib==0.3.6
 dj-database-url==1.0.0
 Django==4.1.2
 django-on-heroku==1.1.2
+docutils==0.17.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl
+exceptiongroup==1.0.2
+fake-useragent==0.1.11
+feedfinder2==0.0.4
+feedparser==6.0.10
+filelock==3.8.0
+Flask==2.2.2
+Flask-Login==0.6.2
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==3.0.2
+fonttools==4.38.0
+free-proxy==1.1.0
+fuzzywuzzy==0.18.0
+gensim==4.2.0
+gnewsclient==1.12
 gunicorn==20.1.0
+h11==0.14.0
+hidapi==0.12.0.post2
+html5lib==1.1
 idna==3.4
+imagesize==1.4.1
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+jieba3k==0.35.1
+Jinja2==3.1.2
+jinja2-time==0.2.0
+joblib==1.2.0
+jsonify==0.5
+kiwisolver==1.4.4
+langcodes==3.3.0
+Levenshtein==0.20.8
+libxml2-python==2.10.3
 lxml==4.9.1
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+murmurhash==1.0.9
+newspaper3k==0.2.8
+nltk==3.7
+numpy==1.23.4
+outcome==1.2.0
+packaging==21.3
+pager==3.3
+pandas==1.5.1
+parse==1.19.0
+parsel==1.7.0
+pathy==0.10.0
+Pillow==9.2.0
+platformdirs==2.5.2
+preshed==3.0.8
+psutil==5.9.3
 psycopg2-binary==2.9.4
+pycairo==1.21.0
+pydantic==1.10.2
+pyee==9.0.4
+Pygments==2.13.0
+PyGObject==3.42.2
+pyparsing==3.0.9
+pyppeteer==1.0.2
+PyQt3D==5.15.5
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
+PyQtChart==5.15.6
+PyQtDataVisualization==5.15.5
+PyQtNetworkAuth==5.15.5
+PyQtPurchasing==5.15.5
+PyQtWebEngine==5.15.6
+pyquery==1.4.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+python-Levenshtein==0.20.8
+python-slugify==6.1.2
+pytz==2022.5
+PyYAML==6.0
+rapidfuzz==2.13.2
+regex==2022.10.31
 requests==2.28.1
+requests-file==1.5.1
+requests-html==0.10.0
+scholarly==1.7.3
+scikit-learn==1.1.3
+scipy==1.9.3
+seaborn==0.12.1
+selenium==4.6.0
+sgmllib3k==1.0.0
+six==1.16.0
+sklearn==0.0.post1
+smart-open==5.2.1
+sniffio==1.3.0
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+spacy==3.4.3
+spacy-legacy==3.0.10
+spacy-loggers==1.0.3
+Sphinx==5.3.0
+sphinx-rtd-theme==1.1.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.4.43
 sqlparse==0.4.3
+srsly==2.4.5
+tabulate==0.9.0
+text-unidecode==1.3
+thinc==8.1.5
+threadpoolctl==3.1.0
+tinysegmenter==0.3
+tldextract==3.4.0
+tqdm==4.64.1
+trio==0.22.0
+trio-websocket==0.9.2
+typer==0.7.0
+typing_extensions==4.4.0
 urllib3==1.26.12
+virtualenv==20.16.6
+w3lib==2.0.1
+wasabi==0.10.1
+webdriver-manager==3.8.5
+webencodings==0.5.1
+websockets==10.4
+Werkzeug==2.2.2
 whitenoise==6.2.0
+wrapt==1.14.1
+wsproto==1.2.0
+zipp==3.10.0
